WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205184
Behavior of [[GetOwnProperty]] for cross-origin windows is not spec-compliant
https://bugs.webkit.org/show_bug.cgi?id=205184
Summary
Behavior of [[GetOwnProperty]] for cross-origin windows is not spec-compliant
Chris Dumez
Reported
2019-12-12 15:52:48 PST
Behavior of [[GetOwnProperty]] for cross-origin windows is not spec-compliant. We should be able to return frames by name, even if their name conflict with the name of a same-origin window property (e.g. "close").
Attachments
WIP Patch
(3.83 KB, patch)
2019-12-12 15:53 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(9.28 KB, patch)
2019-12-12 16:42 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-12-12 15:53:33 PST
Created
attachment 385558
[details]
WIP Patch
Chris Dumez
Comment 2
2019-12-12 16:42:17 PST
Created
attachment 385561
[details]
Patch
WebKit Commit Bot
Comment 3
2019-12-13 09:53:42 PST
Comment on
attachment 385561
[details]
Patch Clearing flags on attachment: 385561 Committed
r253483
: <
https://trac.webkit.org/changeset/253483
>
WebKit Commit Bot
Comment 4
2019-12-13 09:53:43 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-12-13 09:54:49 PST
<
rdar://problem/57915284
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug